--- a/home/templates/website/home_page.html
+++ b/home/templates/website/home_page.html
@@ -280,10 +280,10 @@
             <div class="lecturers-wrapper">
               <div class="row">
                 {% for relation in page.speakers_info.all %}
+                {% image relation.speaker.picture fill-300x300 as speaker_picture %}
                 <div class="small-6 medium-4 large-3 columns spacer lecturer-container">
                   <div class="lecturer">
-                    {% image relation.speaker.picture fill-300x300 as speaker_picture %}
-                    <img src="{{speaker_picture.url}}">
+                    <img src="{{speaker_picture.url}}" class="lecturer-modal-trigger">
                     <div class="text-container">
                       <h3 class="name">{{relation.speaker.name}}</h3>
                       <p class="desk">
@@ -291,6 +291,29 @@
                       </p>
                       <div class="abs-container-icon">
                         <a href="{{relation.speaker.video_url}}" target="_blank"><i class="icon icon-youtube lecturer-video"></i></a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="lecturer-modal-wrapper">
+                    <div class="lecturer-modal-container">
+                      <div class="lecturer-modal row">
+                        <div class="close-button">X</div>
+                        <div class="medium-4">
+                          <img src="{{speaker_picture.url}}">
+                        </div>
+                        <div class="medium-8">
+                          <div class="heading name">
+                            {{relation.speaker.name}}
+                          </div>
+                          <div>
+                            <span class="heading">About:</span>
+                            {{relation.speaker.rich_description|richtext}}
+                          </div>
+                          <div>
+                            <span class="heading">Talk:</span>
+                            {{relation.speaker.talk_description|richtext}}
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
