--- a/home/static/css/main.css
+++ b/home/static/css/main.css
@@ -4777,3 +4777,8 @@ div.info-slots + div.info-slots::after {
 .lecturer-modal-wrapper .lecturer-modal .rich-text p {
   line-height: normal;
 }
+
+.old_partners img {
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
+}
