--- a/home/templates/website/home_page.html
+++ b/home/templates/website/home_page.html
@@ -657,6 +657,9 @@
             <div>
               <a href="{{page.footer_privacy_policy_document.file.url}}" target="_blank">Privacy Policy</a>
             </div>
+            <div>
+              <a href="{{page.footer_cookie_statement_document.file.url}}" target="_blank">Cookie Statement</a>
+            </div>
           </div>
         </div>
       </div>
