--- a/home/templates/website/home_page.html
+++ b/home/templates/website/home_page.html
@@ -645,7 +645,21 @@
             </p>
           </div>
           <div class="small-12 large-6 medium-12 small-order-1 medium-order-1 large-order-2 columns middle-logo-container">
-            <script type="text/javascript" src="https://static.mailerlite.com/data/webforms/710124/d2i4d8.js?v5"></script>
+            <!-- MailerLite Universal -->
+            <script>
+            (function(m,a,i,l,e,r){ m['MailerLiteObject']=e;function f(){
+            var c={ a:arguments,q:[]};var r=this.push(c);return "number"!=typeof r?r:f.bind(c.q);}
+            f.q=f.q||[];m[e]=m[e]||f.bind(f.q);m[e].q=m[e].q||f.q;r=a.createElement(i);
+            var _=a.getElementsByTagName(i)[0];r.async=1;r.src=l+'?v'+(~~(new Date().getTime()/1000000));
+            _.parentNode.insertBefore(r,_);})(window, document, 'script', 'https://static.mailerlite.com/js/universal.js', 'ml');
+
+            var ml_account = ml('accounts', '791671', 'v6b7v5g0j4', 'load');
+            </script>
+            <!-- End MailerLite Universal -->
+            <div class="ml-form-embed"
+             data-account="791671:v6b7v5g0j4"
+             data-form="876532:e3b0y9">
+            </div>
           </div>
           <div class="small-6 large-3 medium-6 small-order-3 medium-order-3 large-order-3 columns right-row">
             <div>
