--- a/home/templates/website/home_page.html
+++ b/home/templates/website/home_page.html
@@ -37,15 +37,15 @@
       <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=509518335896450&ev=PageView&noscript=1"/>
     </noscript>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-64197304-1"></script>
+
     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-      ga('create', 'UA-80777143-1', 'auto');
-      ga('send', 'pageview');
-
+      gtag('config', 'UA-64197304-1');
     </script>
   </head>
   <body>
