--- a/home/static/css/main.css
+++ b/home/static/css/main.css
@@ -4692,16 +4692,15 @@ div.info-slots + div.info-slots::after {
   box-shadow: 3px 3px 0px 0px rgba(38, 38, 36, 0.7);
 }
 
-
 .lecturer-modal-wrapper {
-  display:none;
+  display: none;
   position: fixed;
-  width:100%;
+  width: 100%;
   height: 100%;
-  left:0;
-  top:0;
+  left: 0;
+  top: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index:1;
+  z-index: 1;
 }
 
 .lecturer-modal-wrapper .lecturer-modal-container {
@@ -4710,22 +4709,22 @@ div.info-slots + div.info-slots::after {
   align-items: center;
   position: absolute;
   width: 100%;
-  height:100%;
-  left:0;
+  height: 100%;
+  left: 0;
   top: 0;
 }
 
 .lecturer-modal-wrapper .lecturer-modal {
-  width:700px;
+  width: 700px;
   background-color: rgba(0, 0, 0, 0.5);
   color: white;
-  padding:40px;
+  padding: 40px;
   position: relative;
 }
 
 .lecturer-modal-wrapper .lecturer-modal .close-button {
   position: absolute;
-  right:20px;
+  right: 20px;
   top: 20px;
   font-size: 2rem;
   line-height: normal;
@@ -4745,18 +4744,18 @@ div.info-slots + div.info-slots::after {
 }
 
 .lecturer-modal-wrapper .lecturer-modal img {
-  max-width:100%;
-  padding-right:40px;
+  max-width: 100%;
+  padding-right: 40px;
 }
 
 .lecturer-modal-wrapper .lecturer-modal .heading {
   color: #f9c757;
-  font-size:1.2rem;
+  font-size: 1.2rem;
   font-weight: bold;
 }
 
 .lecturer-modal-wrapper .lecturer-modal .heading.name {
-  font-size:1.4rem;
+  font-size: 1.4rem;
   font-weight: bold;
 }
 
@@ -4786,4 +4785,45 @@ div.info-slots + div.info-slots::after {
 #sponsors .container-content {
   padding-top: 3rem;
   padding-bottom: 0rem;
+}
+
+.blog-post-list-heading {
+  text-align: center;
+  font-size: 30px;
+  color: black;
+  margin: 30px 0;
+}
+
+.grid-blog-post {
+  display: flex;
+  margin: 20px 0;
+}
+
+.grid-blog-post > a > img {
+  flex: 370px 0;
+  margin-right: 30px;
+}
+
+.grid-blog-post > .blog-post-grid-info {
+  flex: 1;
+}
+
+.grid-blog-post > .blog-post-grid-info > .date-created {
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: 300;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.grid-blog-post > .blog-post-grid-info > .blog-post-title {
+  white-space: pre-wrap;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-size: 32px;
+  color: black;
+}
+
+.grid-blog-post > .blog-post-grid-info > .description {
+  color: rgba(0, 0, 0, 0.6);
+  font-size: 18px;
 }
