--- a/home/templates/website/blog/blog_post.html
+++ b/home/templates/website/blog/blog_post.html
@@ -1,7 +1,73 @@
+{% extends 'website/base.html' %}
+
 {% load wagtailcore_tags wagtailimages_tags %}
 
-{% image page.heading_image width-900 as heading_image %}
+{% block header_navigation %}
+<div class="annotation">
+  <div class="logo-header">
+    {% image header_image_logo max-470x172 as header_logo %}
+    <a href="/">
+      <img src="{{header_logo.url}}">
+    </a>
+  </div>
+  <div class="row blog-header-text">
+    <div class="small-offset-1 small-3 columns">
+      <span class="hr"></span>
+    </div>
+    <div class="small-4 columns text-center">
+      <h1>BLOG</h1>
+    </div>
+    <div class="small-3 columns">
+      <span class="hr"> </span>
+    </div>
+  </div>
+</div>
+{% endblock header_navigation %}
 
-<img src="{{page.heading_image.url}}">
-{{page.title}}
-{{page.content|richtext}}
+{% block content %}
+{% image page.heading_image width-1200 as heading_image %}
+
+<section class="blog-post-content">
+  <article class="container">
+    <div class="row heading">
+      <div class="medium-12 medium-centered text-center">
+        <h2>{{page.title}}</h2>
+        <img src="{{heading_image.url}}">
+      </div>
+    </div>
+  </article>
+  <article class="container">
+    <div class="row">
+      <div class="medium-12 medium-centered">
+        <div class="content">
+          {{page.content|richtext}}
+        </div>
+      </div>
+    </div>
+  </article>
+</section>
+
+<section id="location" class="section">
+  <article class="container-map">
+    <div class="row placeholder-wrapper">
+      <div class="small-4 xlarge-offset-2 large-offset-1 columns">
+        <div class="map-placeholder">
+          <h2 class="headline">{{page.location_title}}</h2>
+          <ul class="no-bullet" itemscope="" itemtype="http://schema.org/PostalAddress">
+            <li itemprop="address"><i class="icon icon-map"></i>
+              <span property="streetAddress">
+                {{page.location_place}}
+              </span>
+            </li>
+            <li itemprop="email"><i class="icon icon-envelope"></i>{{page.location_contact}}</li>
+            <li itemscope="" itemtype="http://schema.org/Event"><i class="icon icon-clock"></i>
+              {{page.location_time}}
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div id="map"></div>
+  </article>
+</section>
+{% endblock content %}
