Change og info and image

--- a/home/templates/website/base.html
+++ b/home/templates/website/base.html
@@ -9,10 +9,10 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
 
-    <meta property="og:image" content="{% static "images/hackconf2016.jpg" %}"/>
+    <meta property="og:image" content="{% static "images/hackconf-og-image.jpg" %}"/>
     <meta property="og:url" content="http://hackconf.bg/"/>
     <meta property="og:title" content="HackConf"/>
-    <meta property="og:description" content='HackConf is one of the largest motivational tech conferences in Bulgaria. The conference is organized for a third consecutive year'/>
+    <meta property="og:description" content='HackConf is Bulgaria’s premier “by developers, for developers" motivational and knowledge sharing event.'/>
     <meta property="fb:app_id" content="1649318995353166" />
 
 
