--- a/home/templates/website/home_page.html
+++ b/home/templates/website/home_page.html
@@ -14,6 +14,9 @@
           <a href="https://www.facebook.com/HackConference" target="_blank"><i class="icon icon-fb"></i></a>
         </li>
         <li>
+          <a href="https://www.instagram.com/hackconf/" target="_blank"><img class="navigation-svg-icon" src="{% static "images/icons/instagram.svg"%}" /></a>
+        </li>
+        <li>
           <a href="https://github.com/hackbulgaria/" target="_blank"><i class="icon icon-github"></i></a>
         </li>
         <li>
