--- a/home/templates/website/home_page.html
+++ b/home/templates/website/home_page.html
@@ -132,6 +132,56 @@
     </section>
     {% endif %}
     {% if page.show_schedule %}
+
+    <section class="section schedule-new">
+      <article>
+        <div class="sidescroll-wrapper">
+          <div class="sidescroll-container">
+          {% for a in "ab" %}
+          {% for relation in page.schedule_day_one.all %}
+            <div class="lecture">
+              <div class="info">
+                <div class="vertical-line-container">
+                  <div class="vertical-line with-shadow">
+                  </div>
+                </div>
+                <div class="info-box-container">
+                  <div class="info-box with-shadow">
+                    <div class="title">{{relation.lecture.topic}}</div>
+                    <div class="speaker">
+                      {% for speaker in relation.lecture.speakers.all %}
+                        {{speaker.name}}
+                      {% endfor %}
+                    </div>
+                    <div class="description">{{relation.lecture.description|richtext}}</div>
+                  </div>
+                </div>
+              </div>
+              <div class="timeline-container">
+                <div class="timeline with-shadow">
+                </div>
+                <div class="avatar-time-container">
+                  <div class="avatar-container">
+                  {% for speaker in relation.lecture.speakers.all %}
+                    {% image speaker.picture fill-300x300 as speaker_picture %}
+                    <div class="avatar with-shadow" style="background-image:url({{speaker_picture.url}})">
+                    </div>
+                  {% endfor %}
+                  </div>
+                  <div class="time">
+                    {{relation.lecture.start_time|date:"H:i"}} - {{relation.lecture.end_time|date:"H:i"}}
+                  </div>
+                </div>
+              </div>
+            </div>
+          {% endfor %}
+          {% endfor %}
+        </div>
+        </div>
+      </article>
+    </section>
+
+
     <section id="program" class="section program">
       <article class="container container-content">
         <div class="row">
