--- a/home/templates/website/home_page.html
+++ b/home/templates/website/home_page.html
@@ -135,147 +135,27 @@
 
     <section class="section schedule-new">
       <article>
-        <div class="sidescroll-wrapper">
-          <div class="sidescroll-container">
-          {% for a in "ab" %}
-          {% for relation in page.schedule_day_one.all %}
-            <div class="lecture">
-              <div class="info">
-                <div class="vertical-line-container">
-                  <div class="vertical-line with-shadow">
-                  </div>
-                </div>
-                <div class="info-box-container">
-                  <div class="info-box with-shadow">
-                    <div class="title">{{relation.lecture.topic}}</div>
-                    <div class="speaker">
-                      {% for speaker in relation.lecture.speakers.all %}
-                        {{speaker.name}}
-                      {% endfor %}
-                    </div>
-                    <div class="description">{{relation.lecture.description|richtext}}</div>
-                  </div>
-                </div>
-              </div>
-              <div class="timeline-container">
-                <div class="timeline with-shadow">
-                </div>
-                <div class="avatar-time-container">
-                  <div class="avatar-container">
-                  {% for speaker in relation.lecture.speakers.all %}
-                    {% image speaker.picture fill-300x300 as speaker_picture %}
-                    <div class="avatar with-shadow" style="background-image:url({{speaker_picture.url}})">
-                    </div>
-                  {% endfor %}
-                  </div>
-                  <div class="time">
-                    {{relation.lecture.start_time|date:"H:i"}} - {{relation.lecture.end_time|date:"H:i"}}
-                  </div>
-                </div>
-              </div>
+        <div class="tabbed-interface">
+          <div class="tabs">
+            <div ref="tab-content-1" class="selected">
+              Workshops
             </div>
-          {% endfor %}
-          {% endfor %}
-        </div>
-        </div>
-      </article>
-    </section>
-
-
-    <section id="program" class="section program">
-      <article class="container container-content">
-        <div class="row">
-          <div class="medium-12 medium-centered large-11 large-centered columns">
-            <h2 class="text-center">{{ page.schedule_title }}</h2>
-            <div class="row program">
-              <div class="small-12 large-4 columns">
-                <div class="table-program yellow">
-                  <div class="table-header">
-                    <div class="row align-middle">
-                      <div class="medium-7 columns">
-                        <span class="heading">DAY 1</span>
-                      </div>
-                      <div class="medium-5 columns">
-                        <span class="date">30/9/2017</span>
-                      </div>
-                    </div>
-                  </div>
-                  {% for relation in page.schedule_day_one.all %}
-                  <div class="table-row">
-                    <div class="row">
-                      <div class="medium-9 columns">
-                        <span class="event">{{relation.lecture.topic}}</span>
-                        <span class="name">{{relation.lecture.speaker.name}}</span>
-                      </div>
-                      <div class="medium-3 columns">
-                        <span class="time">{{relation.lecture.start_time|time:"H:i"}}</span>
-                      </div>
-                    </div>
-                  </div>
-                  {% endfor %}
-                </div>
-              </div>
-              <div class="small-12 large-4 columns">
-                <div class="table-program orange">
-                  <div class="table-header">
-                    <div class="row align-middle">
-                      <div class="medium-7 columns">
-                        <span class="heading">DAY 2</span>
-                      </div>
-                      <div class="medium-5 columns">
-                        <span class="date">01/10/2017</span>
-                      </div>
-                    </div>
-                  </div>
-                  {% for relation in page.schedule_day_two.all %}
-                  <div class="table-row">
-                    <div class="row">
-                      <div class="medium-9 columns">
-                        <span class="event">{{relation.lecture.topic}}</span>
-                        <span class="name">{{relation.lecture.speaker.name}}</span>
-                      </div>
-                      <div class="medium-3 columns">
-                        <span class="time">{{relation.lecture.start_time|time:"H:i"}}</span>
-                      </div>
-                    </div>
-                  </div>
-                  {% endfor %}
-                </div>
-              </div>
-
-              <div class="small-12 large-4 columns">
-                <div class="table-program green">
-                  <div class="table-header">
-                    <div class="row align-middle">
-                      <div class="medium-7 columns">
-                        <span class="heading">Workshops</span>
-                      </div>
-                      <div class="medium-5 columns">
-                        <span class="date">29/09/2017</span>
-                      </div>
-                    </div>
-                  </div>
-                  {% for relation in page.workshops_day_one.all %}
-                  <div class="table-row">
-                    <div class="row">
-                      <div class="medium-9 columns">
-                        {% if relation.workshop.enroll_url %}
-                        <span class="event"><a href="{{relation.workshop.enroll_url}}" target="_blank">{{relation.workshop.topic}}</a></span>
-                        {% else %}
-                        <span class="event">{{relation.workshop.topic}}</span>
-                        {% endif %}
-                        <span class="name">{{relation.workshop.lector}}</span>
-                      </div>
-                      <div class="medium-3 columns">
-                        <span class="time">{{relation.workshop.start_time|time:"H:i"}}</span>
-                      </div>
-                    </div>
-                  </div>
-                  {% endfor %}
-
-                  
-                </div>
-              </div>
+            <div ref="tab-content-2">
+              Day 1
+            </div>
+            <div ref="tab-content-3">
+              Day 2
+            </div>
+          </div>
+          <div class="tab-contents">
+            <div class="tab-content-1 selected">
+              {% include 'website/schedule.html' with schedule=page.workshops_day_one %}
+            </div>
+            <div class="tab-content-2">
+              {% include 'website/schedule.html' with schedule=page.schedule_day_one %}
+            </div>
+            <div class="tab-content-3">
+              {% include 'website/schedule.html' with schedule=page.schedule_day_two %}
             </div>
           </div>
         </div>
