Fix anchor for schedule

--- a/home/templates/website/home_page.html
+++ b/home/templates/website/home_page.html
@@ -131,9 +131,9 @@
       </article>
     </section>
     {% endif %}
-    {% if page.show_schedule %}
 
-    <section class="section schedule-new">
+    {% if page.show_schedule %}
+    <section class="section schedule-new" id="program">
       <article>
         <div class="tabbed-interface">
           <div class="tabs">
