Add dates in the schedule

--- a/home/templates/website/home_page.html
+++ b/home/templates/website/home_page.html
@@ -135,16 +135,22 @@
     {% if page.show_schedule %}
     <section class="section schedule-new" id="program">
       <article>
+        <div>
+          <h2 class="text-center">{{ page.schedule_title }}</h2>
+        </div>
         <div class="tabbed-interface">
           <div class="tabs">
             <div ref="tab-content-1">
-              Workshops
+              <div>Workshops</div>
+              <div>14th of September</div>
             </div>
             <div ref="tab-content-2" class="selected">
-              Day 1
+              <div>Day 1</div>
+              <div>15th of September</div>
             </div>
             <div ref="tab-content-3">
-              Day 2
+              <div>Day 2</div>
+              <div>16th of September</div>
             </div>
           </div>
           <div class="tab-contents">
