--- a/home/templates/website/home_page.html
+++ b/home/templates/website/home_page.html
@@ -185,6 +185,103 @@
         </div>
       </article>
     </section>
+
+    <section class="section program responsive">
+      <article class="container container-content">
+        <div class="row">
+          <div class="medium-12 medium-centered large-11 large-centered columns">
+            <h2 class="text-center">{{ page.schedule_title }}</h2>
+            <div class="row program">
+              <div class="small-12 large-4 columns">
+                <div class="table-program yellow">
+                  <div class="table-header">
+                    <div class="row align-middle">
+                      <div class="medium-7 columns">
+                        <span class="heading">DAY 1</span>
+                      </div>
+                      <div class="medium-5 columns">
+                        <span class="date">15/9/2018</span>
+                      </div>
+                    </div>
+                  </div>
+                  {% for relation in page.schedule_day_one.all %}
+                  <div class="table-row">
+                    <div class="row">
+                      <div class="medium-9 columns">
+                        <span class="event">{{relation.lecture.topic}}</span>
+                        <span class="name">{{relation.lecture.speaker.name}}</span>
+                      </div>
+                      <div class="medium-3 columns">
+                        <span class="time">{{relation.lecture.start_time|time:"H:i"}}</span>
+                      </div>
+                    </div>
+                  </div>
+                  {% endfor %}
+                </div>
+              </div>
+              <div class="small-12 large-4 columns">
+                <div class="table-program orange">
+                  <div class="table-header">
+                    <div class="row align-middle">
+                      <div class="medium-7 columns">
+                        <span class="heading">DAY 2</span>
+                      </div>
+                      <div class="medium-5 columns">
+                        <span class="date">16/9/2018</span>
+                      </div>
+                    </div>
+                  </div>
+                  {% for relation in page.schedule_day_two.all %}
+                  <div class="table-row">
+                    <div class="row">
+                      <div class="medium-9 columns">
+                        <span class="event">{{relation.lecture.topic}}</span>
+                        <span class="name">{{relation.lecture.speaker.name}}</span>
+                      </div>
+                      <div class="medium-3 columns">
+                        <span class="time">{{relation.lecture.start_time|time:"H:i"}}</span>
+                      </div>
+                    </div>
+                  </div>
+                  {% endfor %}
+                </div>
+              </div>
+              <div class="small-12 large-4 columns">
+                <div class="table-program green">
+                  <div class="table-header">
+                    <div class="row align-middle">
+                      <div class="medium-7 columns">
+                        <span class="heading">Workshops</span>
+                      </div>
+                      <div class="medium-5 columns">
+                        <span class="date">14/09/2018</span>
+                      </div>
+                    </div>
+                  </div>
+                  {% for relation in page.workshops_day_one.all %}
+                  <div class="table-row">
+                    <div class="row">
+                      <div class="medium-9 columns">
+                        {% if relation.workshop.enroll_url %}
+                        <span class="event"><a href="{{relation.workshop.enroll_url}}" target="_blank">{{relation.workshop.topic}}</a></span>
+                        {% else %}
+                        <span class="event">{{relation.workshop.topic}}</span>
+                        {% endif %}
+                        <span class="name">{{relation.workshop.lector}}</span>
+                      </div>
+                      <div class="medium-3 columns">
+                        <span class="time">{{relation.workshop.start_time|time:"H:i"}}</span>
+                      </div>
+                    </div>
+                  </div>
+                  {% endfor %}
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
+    </section>
     {% endif %}
 
     {% if page.show_speakers_section %}
