Remove link from responsive

--- a/home/templates/website/home_page.html
+++ b/home/templates/website/home_page.html
@@ -263,7 +263,7 @@
                     <div class="row">
                       <div class="medium-9 columns">
                         {% if relation.workshop.enroll_url %}
-                        <span class="event"><a href="{{relation.workshop.enroll_url}}" target="_blank">{{relation.workshop.topic}}</a></span>
+                        <span class="event">{{relation.workshop.topic}}</span>
                         {% else %}
                         <span class="event">{{relation.workshop.topic}}</span>
                         {% endif %}
