Use prope API key for google maps

--- a/home/templates/website/base.html
+++ b/home/templates/website/base.html
@@ -126,7 +126,8 @@
     <script src="{% static "js/foundation.responsiveMenu.js"%}" ></script>
     <script src="{% static "js/foundation.responsiveToggle.js"%}" ></script>
     <script src="{% static "js/foundation.sticky.js"%}" ></script>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB1hT_SQGnwbtB626FoOx3tYPUQK5PoB1Q&callback=initMap"
+  type="text/javascript"></script>
     <script type="text/javascript" src="{% static "js/scripts.js"%}" ></script>
     <script type="text/javascript" src="{% static "js/project.js"%}" ></script>
   </body>
